prevent shrink on mobile
in responsive mode checkbox width < height

--- a/assets/css/page-widgets/todo.css
+++ b/assets/css/page-widgets/todo.css
@@ -79,6 +79,7 @@
 
 		input {
 			margin: 4px 5px 0 2px;
+			flex-shrink: 0;
 
 			&[type="checkbox"]:checked::before {
 				content: url("data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%27http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%27%20viewBox%3D%270%200%2020%2020%27%3E%3Cpath%20d%3D%27M14.83%204.89l1.34.94-5.81%208.38H9.02L5.78%209.67l1.34-1.25%202.57%202.4z%27%20fill%3D%27%2316a34a%27%2F%3E%3C%2Fsvg%3E");
